<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isabel.figuras.MainActivity"
    android:orientation="vertical"
    android:layout_margin="10sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Figuras"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Info"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"

        />



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RadioButton
            android:id="@+id/rCuadrado"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/Cuadrado"
            android:onClick="onRadioButtonClicked"
            android:textSize="18sp"
        />
        <RadioButton
            android:id="@+id/rCirculo"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/Circulo"
            android:onClick="onRadioButtonClicked"
            android:textSize="18sp"
        />

        <RadioButton
            android:id="@+id/rTriangulo"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Triangulo"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/rCubo"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/Cubo"
            android:onClick="onRadioButtonClicked"
            android:textSize="18sp"
            />


    </RadioGroup>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eValor1"
        android:inputType="numberDecimal"


        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eValor2"
        android:inputType="numberDecimal"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eValor3"
        android:inputType="numberDecimal"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_gravity="center"
        android:onClick="calcular"
        android:id="@+id/bcalcular"
        android:background="@color/purple"
        android:textColor="@color/white"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Resultado"
        android:textSize="20sp"
        android:textColor="@color/darkgreen"
        android:gravity="center"
        android:id="@+id/tResultado"

        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Iimagen"

            />


    </LinearLayout>
</ScrollView>


